--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
             transition: background-color 2s ease;
         }
 
-        /* 背景和礼物盒子的样式 */
         .gift-box {
             width: 150px;
             height: 150px;
-            background-image: url('gift.png'); /* 使用你的礼物盒图片 */
+            background-image: url('gift.png');
             background-size: cover;
             background-position: center;
             position: relative;
@@ -45,7 +44,6 @@
             transition: opacity 2s, transform 2s;
         }
 
-        /* 随机散落的效果 */
         .message.show {
             opacity: 1;
             transform: translate(0, 0);
@@ -73,14 +71,12 @@
             pointer-events: none;
         }
 
-        /* 弹幕样式 */
         .barrage {
             position: absolute;
             white-space: nowrap;
             font-size: 20px;
             color: #fff;
             animation: slide 15s linear forwards;
-            /* 随机颜色，可以根据需要调整 */
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
 
@@ -104,7 +100,6 @@
         <div class="message">明信片貌似最后都写祝福语</div>
         <div class="message">那这次可就贪了，一个屏幕能祝福</div>
         <div class="message">Best Wishes！</div>
-        <!-- 更多祝福语可以继续添加 -->
     </div>
 
     <div class="final-message" id="finalMessage">很多东西都会改变，愿友谊不变😛🎇</div>
@@ -115,22 +110,16 @@
         const finalMessage = document.getElementById('finalMessage');
         let index = 0;
 
-        // 背景色的变化数组
         const backgroundColors = ['#f39c12', '#e74c3c', '#1abc9c', '#9b59b6', '#34495e'];
 
-        // 存储已使用的角度
         const usedAngles = [];
+        const MIN_ANGLE_DIFF = 10;
 
-        // 最小角度间隔
-        const MIN_ANGLE_DIFF = 10; // 10度
-
-        // 辅助函数：计算两个角度之间的最小差值（考虑360度环绕）
         function angleDifference(angle1, angle2) {
             let diff = Math.abs(angle1 - angle2) % 360;
             return diff > 180 ? 360 - diff : diff;
         }
 
-        // 生成一个与所有已使用角度相差至少 MIN_ANGLE_DIFF 的随机角度
         function generateUniqueAngle() {
             const MAX_ATTEMPTS = 100;
             let attempts = 0;
@@ -152,39 +141,30 @@
                 attempts++;
             } while (attempts < MAX_ATTEMPTS);
 
-            // 如果超过最大尝试次数，返回一个随机角度
             usedAngles.push(angle);
             return angle;
         }
 
-        // 控制点击礼物盒子时的祝福语弹出
         giftBox.addEventListener('click', () => {
             if (index < messages.length) {
                 document.body.style.backgroundColor = backgroundColors[index % backgroundColors.length];
                 const message = messages[index];
 
-                // 生成一个与之前所有角度相差至少 MIN_ANGLE_DIFF 的随机角度
                 const angle = generateUniqueAngle();
 
-                // 随机距离
-                let distance = Math.random() * 200 + 50; // 随机距离
-                if (distance < 400) distance = 400;
+                const xPercent = Math.cos(angle * Math.PI / 180) * 40 + 50;
+                const yPercent = Math.sin(angle * Math.PI / 180) * 40 + 50;
 
-                // 设置祝福语的随机位置
-                message.style.transform = `translate(${Math.cos(angle * Math.PI / 180) * distance}px, ${Math.sin(angle * Math.PI / 180) * distance}px)`;
+                message.style.left = `${xPercent}%`;
+                message.style.top = `${yPercent}%`;
                 message.classList.add('show');
                 index++;
             } else if (index === messages.length) {
-                // 所有祝福语展示完后，触发弹幕功能
                 triggerBarrage();
                 index++;
-            } else {
-                // 弹幕结束后，显示最终祝福语
-                finalMessage.classList.add('show');
-            }
+            } 
         });
 
-        // 弹幕功能
         function triggerBarrage() {
             const barrageTexts = [
                 "祝你天天开心！",
@@ -195,35 +175,28 @@
                 "吃嘛嘛香，身体倍棒"
             ];
 
-            // 循环生成弹幕
             barrageTexts.forEach((text, i) => {
                 setTimeout(() => {
                     const barrage = document.createElement('div');
                     barrage.className = 'barrage';
                     barrage.textContent = text;
-
-                    // 随机高度
-                    barrage.style.top = `${Math.random() * 80 + 10}%`;
-
+                    barrage.style.top = `${Math.random() * 45 + 35}%`;
                     // 随机颜色（可选）
                     const colors = ['#00ffff'];
                     barrage.style.color = colors[Math.floor(Math.random() * colors.length)];
 
                     document.body.appendChild(barrage);
-
-                    // 移除弹幕
                     setTimeout(() => {
                         barrage.remove();
-                    }, 15000); // 弹幕动画时长
-                }, i * 1000); // 每个弹幕延迟出现
+                    }, 15000);
+                }, i * 1000);
             });
 
-            // 等待弹幕结束后显示最终文字
             setTimeout(() => {
-                finalMessage.classList.add('show');
-                giftBox.classList.add('hidden'); // 隐藏礼物盒子
+                giftBox.classList.add('hidden');
                 messages.forEach(msg => msg.classList.add('hidden'));
-            }, barrageTexts.length * 1000 + 1000); // 等待所有弹幕完成
+                finalMessage.classList.add('show');
+            }, barrageTexts.length * 1000 + 1000);
         }
     </script>
 </body>
